Update Artifact and Configuration classes.